--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-08 21:00+0000\n"
+"POT-Creation-Date: 2021-06-01 00:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1746,6 +1746,15 @@ msgstr ""
 msgid "The WeChat App secret"
 msgstr ""
 
+msgid "With Weni Web Chat, you can integrate your Rapidpro organization as a chat on your website."
+msgstr ""
+
+msgid "This field will serve as name for your channel"
+msgstr ""
+
+msgid "URL where socket communication will take place"
+msgstr ""
+
 msgid "Message Templates"
 msgstr ""
 
@@ -2118,6 +2127,9 @@ msgid "RocketChat identifier"
 msgstr ""
 
 msgid "Discord Identifier"
+msgstr ""
+
+msgid "WeniWebChat Identifier"
 msgstr ""
 
 msgid "Text"
@@ -3607,9 +3619,6 @@ msgstr ""
 msgid "Help"
 msgstr ""
 
-msgid "Sign Out"
-msgstr ""
-
 msgid "Your DT One API key and secret seem invalid. Please check them again and retry."
 msgstr ""
 
@@ -4046,6 +4055,21 @@ msgid "Create Referral Trigger"
 msgstr ""
 
 msgid "Create Schedule"
+msgstr ""
+
+msgid "Enter the code from your authentication application"
+msgstr ""
+
+msgid "Invalid MFA token. Please try again."
+msgstr ""
+
+msgid "Submit"
+msgstr ""
+
+msgid "Backup Token"
+msgstr ""
+
+msgid "Enter one of the tokens generated when activating the two-factor login"
 msgstr ""
 
 msgid "Processing"
@@ -5177,6 +5201,15 @@ msgstr ""
 msgid "<div class='code mt-4'> Manage > API Usage > Callback API > Server Settings </div> <div class='mt-2'> Enter the Webhook URL below for the <div class='code inline py-1'>URL</div> field and the Verify Token in the <div class='code inline py-1'>Secret Key</div> field. </div> <div class='code mt-6'> Manage > API Usage > Callback API > Event Types </div> <div class='mt-2'> Check the option %(option)s </div>"
 msgstr ""
 
+msgid "With <b>Weni Web Chat,</b> you can integrate your Rapidpro organization as a chat on your website."
+msgstr ""
+
+msgid "After input a <div class='code'>Name</div> for the chat that will connect to your website, you will need to configure the <div class='code'>Base URL</div> that Rapidpro requires for sending and receiving messages. Then you will need to configure how the chat will be shown on your website."
+msgstr ""
+
+msgid "For this configuration, access <a href='https://docs.ilhasoft.mobi/l/en/channels-category/untitled-article-en'> this documentation. </a>"
+msgstr ""
+
 msgid "Your WhatsApp channel is now connected, you should be able to send and receive messages as normal."
 msgstr ""
 
@@ -5992,6 +6025,9 @@ msgstr[1] ""
 msgid "Results %(start)s - %(end)s of %(total)s"
 msgstr ""
 
+msgid "Hide"
+msgstr ""
+
 #, python-format
 msgid "Aliases for %(name)s"
 msgstr ""
@@ -6475,7 +6511,7 @@ msgid "This will disconnect your DT One account. Payment actions will no longer 
 msgstr ""
 
 #, python-format
-msgid "Your workspace is <b>%(org)s</b>"
+msgid "Your project is <b>%(org)s</b>"
 msgstr ""
 
 #, python-format
@@ -6493,6 +6529,9 @@ msgid_plural ""
 "          "
 msgstr[0] ""
 msgstr[1] ""
+
+msgid "Click here to edit"
+msgstr ""
 
 msgid "Manage Workspaces"
 msgstr ""
@@ -6766,8 +6805,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"    Your email address is <b>%(email)s</b>.\n"
-"  "
+"      Your email address is <b>%(email)s</b>.\n"
+"    "
 msgstr ""
 
 msgid "To disable two-factor authentication for your login, enter your current password."
@@ -7331,6 +7370,9 @@ msgid "Create a message keyword that allows people to join a group."
 msgstr ""
 
 msgid "Start a flow in the future or on a schedule."
+msgstr ""
+
+msgid "Backup Tokens"
 msgstr ""
 
 msgid "Enter a query"
