--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-08 21:00+0000\n"
+"POT-Creation-Date: 2021-06-01 00:53+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Ilhasoft <contato@ilhasoft.com.br>, 2021\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/rapidpro/teams/226/pt_BR/)\n"
@@ -1768,6 +1768,17 @@ msgstr "O App ID do WeChat"
 msgid "The WeChat App secret"
 msgstr "O segredo do APP WeChat"
 
+msgid "With Weni Web Chat, you can integrate your Rapidpro organization as a chat on your website."
+msgstr ""
+
+#, fuzzy
+#| msgid "Choose a name for your label"
+msgid "This field will serve as name for your channel"
+msgstr "Escolha um nome para o seu rótulo"
+
+msgid "URL where socket communication will take place"
+msgstr ""
+
 msgid "Message Templates"
 msgstr "Templates de Mensagens."
 
@@ -2144,6 +2155,11 @@ msgstr "Indentificado do Rocket.Chat"
 
 msgid "Discord Identifier"
 msgstr ""
+
+#, fuzzy
+#| msgid "WeChat identifier"
+msgid "WeniWebChat Identifier"
+msgstr "Identificador do WeniWebChat"
 
 msgid "Text"
 msgstr "Texto"
@@ -3653,9 +3669,6 @@ msgstr "Adicionar serviço de Ticket"
 msgid "Help"
 msgstr "Ajuda"
 
-msgid "Sign Out"
-msgstr "Sair"
-
 msgid "Your DT One API key and secret seem invalid. Please check them again and retry."
 msgstr "Sua chave de API do DT One e o secret parecem inválidos. Por favor cheque-os novamente e tente novamente."
 
@@ -4093,6 +4106,25 @@ msgstr "Criar Disparador de Referência"
 
 msgid "Create Schedule"
 msgstr "Criar agendamento"
+
+msgid "Enter the code from your authentication application"
+msgstr ""
+
+#, fuzzy
+#| msgid "Invalid backup token. Please try again."
+msgid "Invalid MFA token. Please try again."
+msgstr "Token de backup inválido. Por favor tente novamente."
+
+msgid "Submit"
+msgstr ""
+
+#, fuzzy
+#| msgid "Use Backup Token"
+msgid "Backup Token"
+msgstr "Utilizar Token de Backup"
+
+msgid "Enter one of the tokens generated when activating the two-factor login"
+msgstr ""
 
 msgid "Processing"
 msgstr "Processando"
@@ -5292,6 +5324,15 @@ msgstr "Para completar a configuração você deve inserir algumas informações
 msgid "<div class='code mt-4'> Manage > API Usage > Callback API > Server Settings </div> <div class='mt-2'> Enter the Webhook URL below for the <div class='code inline py-1'>URL</div> field and the Verify Token in the <div class='code inline py-1'>Secret Key</div> field. </div> <div class='code mt-6'> Manage > API Usage > Callback API > Event Types </div> <div class='mt-2'> Check the option %(option)s </div>"
 msgstr "<div class='code mt-4'> Gerenciar > Uso de API > API de Callback > Configurações do Servidor </div> <div class='mt-2'> Insira a URL de Webhook abaixo para o campo <div class='code inline py-1'>URL</div> e o Token de Verificação no campo <div class='code inline py-1'>Chave Secreta</div></div> <div class='code mt-6'> Gerenciar > Uso de API > API de Callback > Tipos de Evento </div> <div class='mt-2'> Marque a opção %(option)s </div>"
 
+msgid "With <b>Weni Web Chat,</b> you can integrate your Rapidpro organization as a chat on your website."
+msgstr "Com o <b>Weni Web Chat,</b> você pode integrar sua organização no Rapidpro como um chat no seu website."
+
+msgid "After input a <div class='code'>Name</div> for the chat that will connect to your website, you will need to configure the <div class='code'>Base URL</div> that Rapidpro requires for sending and receiving messages. Then you will need to configure how the chat will be shown on your website."
+msgstr "Depois de inserir um <div class='code'>Nome</div> para o chat que vai se conectar ao seu website, você precisa configurar a <div class='code'>URL Base</div> para que o Rapidpro possa enviar e receber mensagens. você também precisa configurar como o chat será exibido no seu website."
+
+msgid "For this configuration, access <a href='https://docs.ilhasoft.mobi/l/en/channels-category/untitled-article-en'> this documentation. </a>"
+msgstr "Para mais detalhes, acesse <a href='https://docs.ilhasoft.mobi/l/pt/canais/how-to-create-a-script-to-connect-pushinho-and-rapidpro'> a documentação oficial. </a>"
+
 msgid "Your WhatsApp channel is now connected, you should be able to send and receive messages as normal."
 msgstr "Seu canal de WhatsApp está agora conectado, você poderá ser capaz de enviar e receber mensagens normalmente."
 
@@ -6148,6 +6189,9 @@ msgstr[1] "%(count)s resultados"
 msgid "Results %(start)s - %(end)s of %(total)s"
 msgstr "Resultados %(start)s - %(end)s de %(total)s"
 
+msgid "Hide"
+msgstr "Esconder"
+
 #, python-format
 msgid "Aliases for %(name)s"
 msgstr "Apelidos para %(name)s"
@@ -6665,7 +6709,7 @@ msgid "Open the one-time password application with which you setup two-factor au
 msgstr "Abra a aplicação de senha única no qual você irá configurar a sua autenticação de 2-fatores na sua conta, e entre o código abaixo para verificar a sua identidade."
 
 msgid "Use Backup Token"
-msgstr "Utilziar Token de Backup"
+msgstr "Utilizar Token de Backup"
 
 msgid "Your workspace can have logins with various roles. You can use the Manage Logins page to view all existing logins or to add new logins to your workspace."
 msgstr "Sua área de trabalho pode ter logins com várias funções. Você pode usar a página Gerenciar Logins para ver todas os logins existentes ou adicionar novos logins para sua área de trabalho."
@@ -6771,8 +6815,9 @@ msgstr "Desconectar DT One"
 msgid "This will disconnect your DT One account. Payment actions will no longer be processed. Are you sure you want to proceed?"
 msgstr "Isso desconectará sua conta do DT One. As ações de pagamento não serão mais processadas. Tem certeza de que deseja prosseguir?"
 
-#, python-format
-msgid "Your workspace is <b>%(org)s</b>"
+#, fuzzy, python-format
+#| msgid "Your workspace is <b>%(org)s</b>"
+msgid "Your project is <b>%(org)s</b>"
 msgstr "Sua área de trabalho é <b>%(org)s</b>"
 
 #, python-format
@@ -6796,6 +6841,9 @@ msgstr[1] ""
 "\n"
 "            Você possui <b>%(org_count)s</b> áreas de trabalho filhas.\n"
 "          "
+
+msgid "Click here to edit"
+msgstr "Click aqui para editar"
 
 msgid "Manage Workspaces"
 msgstr "Gerenciar Áreas de trabalho"
@@ -7084,11 +7132,15 @@ msgstr "Obrigado por apoiar %(brand)s."
 msgid "Complementary credits, thanks for trying %(brand)s."
 msgstr "Créditos complementares, obrigado por testar %(brand)s."
 
-#, python-format
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "    Your email address is <b>%(email)s</b>.\n"
+#| "  "
 msgid ""
 "\n"
-"    Your email address is <b>%(email)s</b>.\n"
-"  "
+"      Your email address is <b>%(email)s</b>.\n"
+"    "
 msgstr ""
 "\n"
 "    Seu endereço de email é <b>%(email)s</b>.\n"
@@ -7786,12 +7838,20 @@ msgstr "Crie uma palavra-chave que permita que as pessoas se juntem a um grupo."
 msgid "Start a flow in the future or on a schedule."
 msgstr "Iniciar um fluxo futuramente ou segundo agendamento."
 
+#, fuzzy
+#| msgid "Use Backup Token"
+msgid "Backup Tokens"
+msgstr "Utilizar Token de Backup"
+
 msgid "Enter a query"
 msgstr "Adicione uma dúvida"
 
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr "Encontrado ${count} para ${query}"
+
+#~ msgid "Sign Out"
+#~ msgstr "Sair"
 
 #~ msgid "Disconnect Nexmo"
 #~ msgstr "Desconectar Nexmo"
@@ -7818,7 +7878,6 @@ msgstr "Encontrado ${count} para ${query}"
 #~ msgid " and "
 #~ msgstr "e"
 
-#, python-format
 #~ msgid "%(lang1)s and %(lang2)s"
 #~ msgstr "%(lang1)s e %(lang2)s"
 
