Add model changes for closed ticket triggers too

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-01 16:27+0000\n"
+"POT-Creation-Date: 2021-06-01 16:54+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Moy Moussan <moymoussan@gmail.com>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/rapidpro/teams/226/es/)\n"
@@ -3974,6 +3974,11 @@ msgstr ""
 #| msgid "Schedule Trigger"
 msgid "Social Media Triggers"
 msgstr "Activador de programa"
+
+#, fuzzy
+#| msgid "Triggers"
+msgid "Ticket Triggers"
+msgstr "Activadores"
 
 #, fuzzy
 #| msgid "Catch All Trigger"
