--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-01 16:27+0000\n"
+"POT-Creation-Date: 2021-06-01 16:54+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -3982,6 +3982,11 @@ msgstr ""
 #| msgid "Schedule Trigger"
 msgid "Social Media Triggers"
 msgstr "Триггер Расписания"
+
+#, fuzzy
+#| msgid "Triggers"
+msgid "Ticket Triggers"
+msgstr "Триггеры"
 
 #, fuzzy
 #| msgid "Catch All Trigger"
