--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-01 16:27+0000\n"
+"POT-Creation-Date: 2021-06-01 16:54+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -3973,6 +3973,11 @@ msgstr ""
 #| msgid "Schedule Trigger"
 msgid "Social Media Triggers"
 msgstr "Planning de declencheur"
+
+#, fuzzy
+#| msgid "Triggers"
+msgid "Ticket Triggers"
+msgstr "Déclencheurs"
 
 #, fuzzy
 #| msgid "Catch All Trigger"
